--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^4.11.3",
     "bootstrap": "^5.3.3",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "underscore": "^1.13.6"
   }
 }
